<resources>
    <string name="app_name">Friss kosár</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="or_register">vagy Regisztrálj</string>
    <string name="fruitsCategory">Gyümölcsök</string>
    <string name="vegetablesCategory">Zöldségek</string>
    <string name="honeysCategory">Mézek</string>
    <string name="pastasCategory">Szárazáru</string>
    <string name="check_as_guest">csak körbenézek vendégként</string>
    <string name="into_basket">Kosárba</string>
    <string name="log_in_to_buy">Jelentkezz be a vásárláshoz!</string>
    <string name="search_menu_option">Keresés</string>
    <string name="cart_menu_option">Kosár</string>
    <string name="layout_menu_option">Kinézet</string>
    <string name="setting_menu_option">Beálltások</string>
    <string name="logout_menu_option">Kijelentkezés</string>
    <string name="login_menu_option">Bejelentkezés</string>
    <string name="cart_icon">kosarka</string>
    <string name="item_info_placeholder">item_info_placeholder</string>
    <string name="image_card">kepecske</string>
    <string name="delete">Törlés</string>
    <string name="empty_the_cart">Kosár ürítése</string>
    <string name="pay">Fizetés</string>
    <string name="still_buying">Vissza a vásárláshoz</string>
    <string name="profile">Profil</string>
    <string name="account">Profil</string>
    <string name="take_account_pic">Készíts képet!</string>
    <string name="accountData">Adatok:</string>
    <string name="placeholderaccountemail">placeholderAccountEmail</string>
    <string name="placeholderaccountusername">placeholderAccountUserName</string>
    <string name="profile_delete">Profil törlése (örökre)</string>
    <string name="delete_confirm_edittext">Megerősítéshez: email cím</string>
    <string name="change_password">Jelszó változtatása</string>
    <string name="new_password">Új jelszó</string>
    <string name="change_username">Felhasználónév változtatása</string>
    <string name="new_username">Új felhasználónév</string>
    <string name="back_to_categories">Vissza a főoldalra</string>
    <string name="confirm_new_password">Jelszó megerősítése</string>
    <string name="placeholderaccountpoints">placeholderaccountpoints</string>
    <string name="refresh_list">Terméklista frissítése</string>
    <string name="currency">Ft</string>
    <string name="cart_is_empty">Üres a kosarad!</string>
    <string name="delete_from_cart">Törlés</string>
    <string name="summary_currency">Végösszeg: 0 Ft</string>
    <string-array name="fruit_product_names">
        <item>Piros alma</item>
        <item>Zöld szőlő</item>
        <item>Narancs</item>
        <item>Körte</item>
        <item>Banán</item>
        <item>Eper</item>
        <item>Szilva</item>
        <item>Citrom</item>
        <item>Mangó</item>
        <item>Barack</item>
    </string-array>
    <string-array name="fruit_product_price">
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>550</item>
        <item>400</item>
        <item>900</item>
        <item>750</item>
        <item>650</item>
        <item>1200</item>
        <item>850</item>
    </string-array>
    <string-array name="fruit_product_description">
        <item>Édes és ropogós gyümölcs, gyakori tízóraira vagy uzsonnára. Tele van rosttal és C-vitaminnal.</item>
        <item>Lédús és enyhén savanykás bogyók, frissítő nasi vagy borkészítés alapanyaga.</item>
        <item>Vastag héjú, lédús citrusféle, híres magas C-vitamin-tartalmáról.</item>
        <item>Lédús, édeskés gyümölcs puha hússal, kiváló magában vagy süteményekbe.</item>
        <item>Hosszúkás, sárga gyümölcs, gyors energiát adó szénhidrátforrás.</item>
        <item>Apró, piros, illatos gyümölcs, tele antioxidánsokkal és nyári hangulattal.</item>
        <item>Lédús, enyhén savanykás gyümölcs, frissen vagy aszalva is népszerű.</item>
        <item>Savanyú citrusféle, ízesítőként vagy italokban gyakran használt.</item>
        <item>Trópusi, narancssárga húsú gyümölcs, édes ízvilággal és egzotikus aromával.</item>
        <item>Bársonyos héjú, zamatos gyümölcs, kiváló lekvárnak és sütikbe is.</item>
    </string-array>
    <string-array name="vegetable_product_names">
        <item>Paprika</item>
        <item>Paradicsom</item>
        <item>Fehér Répa</item>
        <item>Uborka</item>
        <item>Hagyma</item>
        <item>Brokkoli</item>
        <item>Karalábé</item>
        <item>Kelbimbó</item>
        <item>Sárgarépa</item>
        <item>Zeller</item>
    </string-array>
    <string-array name="vegetable_product_price">
        <item>300</item>
        <item>400</item>
        <item>200</item>
        <item>250</item>
        <item>150</item>
        <item>350</item>
        <item>180</item>
        <item>320</item>
        <item>220</item>
        <item>280</item>
    </string-array>
    <string-array name="vegetable_product_description">
        <item>Ropogós, édeskés zöldség, gyakran használják salátákban vagy lecsóban.</item>
        <item>Lédús és piros, alapvető hozzávaló szendvicsekhez, salátákhoz és szószokhoz.</item>
        <item>Egyik fő alapanyaga a húslevesnek, karakteres ízű gyökérzöldség.</item>
        <item>Frissítő, ropogós zöldség, kiváló salátákhoz és savanyítva is népszerű.</item>
        <item>Erejéről ismert alapzöldség, ami számos étel ízét meghatározza.</item>
        <item>Zöld színű, fás állagú zöldség, gazdag rostban és C-vitaminban.</item>
        <item>Gömbölyded, enyhén édeskés zöldség, levesekben és főzelékekben kedvelt.</item>
        <item>Apró káposztafélék, enyhén kesernyés ízzel, sütve vagy párolva finom.</item>
        <item>Édes és ropogós gyökérzöldség, közkedvelt rágcsálnivaló és főzelék alap.</item>
        <item>Erőteljes aromájú gyökérzöldség, levesek és szószok egyik fő ízesítője.</item>
    </string-array>
    <string-array name="honey_product_names">
        <item>Akácméz</item>
        <item>Virágporos méz</item>
        <item>Rezgős méz</item>
        <item>Lavendulás méz</item>
        <item>Citromos méz</item>
        <item>Eukaliptusz méz</item>
        <item>Tölgyfás méz</item>
        <item>Szőlővirág méz</item>
        <item>Sárgabarackos méz</item>
        <item>Citrusos méz</item>
    </string-array>
    <string-array name="honey_product_price">
        <item>2000</item>
        <item>1800</item>
        <item>2200</item>
        <item>2400</item>
        <item>2100</item>
        <item>2300</item>
        <item>2500</item>
        <item>1900</item>
        <item>2000</item>
        <item>2300</item>
    </string-array>
    <string-array name="honey_product_description">
        <item>Világos színű, enyhén édeskés méz, az akácvirágról gyűjtve – sokáig folyékony marad.</item>
        <item>Gazdag ízvilágú méz, tele természetes virágporral – igazi immunerősítő különlegesség.</item>
        <item>Kissé kristályos, rezgő állagú méz, amely különleges textúrájával tűnik ki.</item>
        <item>Kellemesen virágos, aromás méz levendulából – nyugtató hatása miatt is kedvelt.</item>
        <item>Frissítő ízvilágú méz, amely enyhe citromos jegyeket hordoz – kiváló teákhoz.</item>
        <item>Erőteljes, enyhén mentolos aromájú méz eukaliptuszból – légúttisztító hatásáról ismert.</item>
        <item>Sötétebb színű, fás jegyekkel bíró méz, tölgyes erdők mélyéről – igazán különleges élmény.</item>
        <item>Finom, virágos illatú méz szőlővirágról, enyhén gyümölcsös utóízzel.</item>
        <item>Sárgabarack aromával dúsított méz – gyümölcsösen édes, kiváló pirítósra vagy desszerthez.</item>
        <item>Élénk citrusos ízvilágú méz, amely igazi frissességet hoz a reggelekbe.</item>
    </string-array>
    <string-array name="pasta_product_names">
        <item>Spagetti</item>
        <item>Penne</item>
        <item>Farfalle</item>
        <item>Tagliatelle</item>
        <item>Fusilli</item>
        <item>Rigatoni</item>
        <item>Linguine</item>
        <item>Cavatappi</item>
        <item>Conchiglie</item>
        <item>Orecchiette</item>
    </string-array>
    <string-array name="pasta_product_price">
        <item>400</item>
        <item>450</item>
        <item>500</item>
        <item>550</item>
        <item>450</item>
        <item>480</item>
        <item>520</item>
        <item>530</item>
        <item>560</item>
        <item>570</item>
    </string-array>
    <string-array name="pasta_product_description">
        <item>Hosszú, vékony tészta, a klasszikus olasz étkezések elengedhetetlen része, gyakran paradicsomos vagy húsos szószokkal tálalva.</item>
        <item>Rövid, cső alakú tészta, ideális sűrű, krémes szószokhoz, könnyen felveszi a szószokat.</item>
        <item>Kis, pillangó formájú tészta, amely ideális salátákhoz vagy könnyű szószokhoz.</item>
        <item>Széles, lapos tészta, amely tökéletes a gazdag húsos vagy zöldséges szószokhoz.</item>
        <item>Csavart formájú tészta, amely könnyedén befogadja a különböző szószokat, ideális rakott ételekhez.</item>
        <item>Erősebb, vastagabb tészta, amely jól megőrzi formáját sűrű, húsos szószokban.</item>
        <item>Hosszú, lapos tészta, amely a hagyományos olasz étkezések részét képezi, remekül illik tengeri ételekhez.</item>
        <item>Csavart, spirális tészta, amely kiválóan megfogja a szószokat, ideális akár húsos, akár zöldséges ételekhez.</item>
        <item>Határozott, kagyló alakú tészta, amely különböző szószokkal könnyen párosítható, és remekül elkészíthető sütőben is.</item>
        <item>Kisebb, fül alakú tészta, amely gyakran szerepel a tradicionális olasz ételekben, különösen levesekben vagy salátákban.</item>
    </string-array>
</resources>