<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->

    <!--        android:fontFamily="casual"-->
    <!--        android:text="@string/app_name"-->
    <!--        android:textSize="24sp"-->

    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/shapeableImageView"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginBottom="-16dp"
        android:maxWidth="128dp"
        android:maxHeight="128dp"
        android:minWidth="64dp"
        android:minHeight="64dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fruitmain">

    </com.google.android.material.imageview.ShapeableImageView>

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_marginStart"
        android:layout_marginEnd="@dimen/default_marginEnd"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.25"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_marginStart"
        android:layout_marginEnd="@dimen/default_marginEnd"
        android:layout_marginBottom="250dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"

        app:layout_constraintVertical_bias="0.075"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_marginStart"
        android:layout_marginEnd="@dimen/default_marginEnd"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/registerButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:onClick="register"
        android:text="@string/or_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/loginAsGuest"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:onClick="loginAsGuest"

        android:text="@string/check_as_guest"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.85" />

    <!--    <TextView-->
    <!--        android:id="@+id/registerButton"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@id/loginButton"-->
    <!--        android:layout_marginStart="96dp"-->
    <!--        android:layout_marginEnd="96dp"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        android:onClick="register"-->
    <!--        android:padding="8dp"-->
    <!--        android:text="@string/or_register"-->
    <!--        android:textColor="?android:attr/textColorLink"-->
    <!--        android:textSize="16sp"-->


    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/loginButton"-->
    <!--        app:layout_constraintVertical_bias="0.025"-->
    <!--        android:textAlignment="center"-->
    <!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>