<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="20dp"
    card_view:cardBackgroundColor="@android:color/transparent"
    card_view:contentPadding="2dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_card"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:fontFamily="sans-serif-medium"
            android:padding="8dp"
            android:text="@string/item_info_placeholder"
            android:textColor="?android:textColorSecondary" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:layout_marginStart="8dp"
            android:isIndicator="true" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:padding="8dp"
            android:text="@string/item_info_placeholder" />
        <!--            style="@style/ItemDetailText"-->

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/item_info_placeholder"
            android:textColor="@color/black" />
        <!--            style="@style/ItemDetailText"-->

        <!--        <Button-->
        <!--            android:id="@+id/add_to_cart"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@id/price"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:layout_marginBottom="8dp"-->
        <!--            android:text="@string/into_basket" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:layout_centerHorizontal="true"

            >

            <Button
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/into_basket" />

<!--            <Button-->
<!--                android:id="@+id/delete"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="5dp"-->
<!--                android:text="@string/delete" />-->

        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>